# stork

./: .clang-format  .gitignore  README.md  meson.build
src/: actWorker.cpp  actWorker.h  argHandler.cpp  argHandler.h  argParser.cpp  argParser.h  main.cpp  shared.h
